fixing a smallmobile layout issue

--- a/_sass/pages/_cv_page.scss
+++ b/_sass/pages/_cv_page.scss
@@ -1,6 +1,6 @@
 .cv-wrap{
 	@media all and (max-width: 600px){
-		padding: 8px 0.5em 3em 0.5em;
+		padding: 32px 0.5em 3em 0.5em;
 		h1{ font-size: $ms-3;}
 		h2{ font-size: $ms-2;}
 		h3{ font-size: $ms-1;}
