--- a/_sass/templates/_header_template.scss
+++ b/_sass/templates/_header_template.scss
@@ -2,8 +2,8 @@
 	background: #F13564;
 	overflow: hidden;
 	padding: 10px;
+	text-align: center;
 	h1, .button{
-		float: left;
 		display: inline-block;
 		margin: 0;
 	}
@@ -15,6 +15,7 @@
 	}
 	.heading-talk-link{
 		height: 30px;
+		margin-left: 15px;
 		position: relative;
 		font-family: $sofia-bold;
 		line-height: 30px;
@@ -116,6 +117,7 @@
 
 @media all and (max-width: 500px){
 	.subheading-website{
+		span{font-size: 18px;}
 		span:nth-of-type(2){
 			display:none;
 		}
